fix(filter-field): Fixes an issue with button alignments in the filter-field.
The filter-field buttons where styled by a side-effect in the
button.scss, which does not make sense. The button module ships code,
that it potentially does not need. Additionally, the side effect led to
misalignment in the tag-value, remove tag and clear all button styles.

--- a/components/button/src/button.scss
+++ b/components/button/src/button.scss
@@ -99,10 +99,9 @@ a.dt-button[disabled] {
 }
 
 // Text-buttons in table or filter-field cells need to be smaller
-.dt-cell .dt-button:not(.dt-icon-button),
-.dt-filter-field-body .dt-button:not(.dt-icon-button) {
-  height: 24px;
-  line-height: 24px;
+.dt-cell .dt-button:not(.dt-icon-button) {
+  height: 22px;
+  line-height: 22px;
 
   .dt-button-icon {
     width: 16px;
