--- a/components/filter-field/src/filter-field.scss
+++ b/components/filter-field/src/filter-field.scss
@@ -108,6 +108,8 @@ dt-filter-field-tag {
 button.dt-filter-field-clear-all-button {
   margin-top: 3px;
   margin-left: 8px;
+  height: 24px;
+  line-height: 22px;
 }
 
 // We need to double the class to get a better specificity
